; ModuleID = '/home/carl/AnghaBench/mpv/common/extr_tags.c_mp_tags_merge.c'
source_filename = "/home/carl/AnghaBench/mpv/common/extr_tags.c_mp_tags_merge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_tags = type { i32, i32*, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_tags_merge(%struct.mp_tags* %0, %struct.mp_tags* %1) #0 {
  %3 = alloca %struct.mp_tags*, align 8
  %4 = alloca %struct.mp_tags*, align 8
  %5 = alloca i32, align 4
  store %struct.mp_tags* %0, %struct.mp_tags** %3, align 8
  store %struct.mp_tags* %1, %struct.mp_tags** %4, align 8
  store i32 0, i32* %5, align 4
  br label %6

6:                                                ; preds = %29, %2
  %7 = load i32, i32* %5, align 4
  %8 = load %struct.mp_tags*, %struct.mp_tags** %4, align 8
  %9 = getelementptr inbounds %struct.mp_tags, %struct.mp_tags* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  %11 = icmp slt i32 %7, %10
  br i1 %11, label %12, label %32

12:                                               ; preds = %6
  %13 = load %struct.mp_tags*, %struct.mp_tags** %3, align 8
  %14 = load %struct.mp_tags*, %struct.mp_tags** %4, align 8
  %15 = getelementptr inbounds %struct.mp_tags, %struct.mp_tags* %14, i32 0, i32 2
  %16 = load i32*, i32** %15, align 8
  %17 = load i32, i32* %5, align 4
  %18 = sext i32 %17 to i64
  %19 = getelementptr inbounds i32, i32* %16, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load %struct.mp_tags*, %struct.mp_tags** %4, align 8
  %22 = getelementptr inbounds %struct.mp_tags, %struct.mp_tags* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  %24 = load i32, i32* %5, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @mp_tags_set_str(%struct.mp_tags* %13, i32 %20, i32 %27)
  br label %29

29:                                               ; preds = %12
  %30 = load i32, i32* %5, align 4
  %31 = add nsw i32 %30, 1
  store i32 %31, i32* %5, align 4
  br label %6

32:                                               ; preds = %6
  ret void
}

declare dso_local i32 @mp_tags_set_str(%struct.mp_tags*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
